--- a/relazione/sezioni/frontespizio.tex
+++ b/relazione/sezioni/frontespizio.tex
@@ -20,13 +20,13 @@
     \Dipartimento{Matematica ``Tullio Levi-Civita''}
     \Corso[Laurea]{Informatica}
     \Annoaccademico{2019--2020}
-    \Titolo{Trains}
-    \Sottotitolo{Relazione}
+    \Titolo{Realizzazione dell'app mobile Trains}
+    \Sottotitolo{Progetto di Mobile Programming}
     \NCandidato{}
     \Candidato{Matteo Marchiori\\Giovanni Peron}
-    %\Relatore{Prof.~Davide Bresolin}
+    %\Relatore{Prof.~Ombretta Gaggi}
     \Punteggiatura{}
     %\Rientro{3cm}
-    \Margini{4cm}{5cm}{4cm}{3cm}
+    %\Margini{4cm}{5cm}{4cm}{3cm}
     \Preambolo{\usepackage{iwona}}
 \end{frontespizio}
