--- a/relazione/sezioni/gamification.tex
+++ b/relazione/sezioni/gamification.tex
@@ -1,5 +1,8 @@
 \chapter{Gamification\label{sec:gamification}}
 
+
+Questo capitolo riassume le parti utili della tesi \parencite{segato:tesi}, che descrive alcuni aspetti fondamentali delle tecniche di gamification.
+
 \section{Tecnologie persuasive\label{sec:tecnologie-persuasive}}
 
 Una definizione di tecnologie persuasive è la seguente:
@@ -122,10 +125,10 @@ I tipi di giocatore che sono stati identificati sono i seguenti:
 \end{description}
 
 Molti giochi e applicazioni utilizzano cooperazione e competizione, il supporto sociale e la pressione dei propri pari come motivatori per favorire il cambiamento di comportamento.
-Nonostante meccanismi basati sui gruppi siano promettenti, studi riportano risultati conflittuali sulla loro efficacia. L'influenza sociale può infatti variare in base alle condizioni e alle caratteristiche degli individui coinvolti. È stato fatto uno studio per valutare le attitudini dei giocatori in un "health game" multiplayer e sono stati riscontrati $5$ tipi di giocatori:
+Nonostante meccanismi basati sui gruppi siano promettenti, studi riportano risultati conflittuali sulla loro efficacia. L'influenza sociale può infatti variare in base alle condizioni e alle caratteristiche degli individui coinvolti. È stato fatto uno studio per valutare le attitudini dei giocatori in un ``health game'' multiplayer e sono stati riscontrati $5$ tipi di giocatori:
 \begin{description}
     \item[achievers]: si focalizzano sul miglioramento personale; a loro non piace essere sottoposti a confronti . Sono motivati dal progresso individuale e dal migliorare le proprie performance. La loro influenza su altri membri del gruppo è limitata;
-    \item[active buddies]: gioiscono della compagnia di un piccolo gruppo di amici stretti che creano. Sono motivati dal "social play", si ricordano tra loro di essere attivi;
+    \item[active buddies]: gioiscono della compagnia di un piccolo gruppo di amici stretti che creano. Sono motivati dal ``social play'', si ricordano tra loro di essere attivi;
     \item[social experience seekers]: usano i mezzi di comunicazione del gioco e applicano il role-playing che questi generano come contesto dove interagire con i compagni di gioco;
     \item[team players]: i giocatori sono più motivati dai risultati di gruppo e dal ranking e incoraggiano gli altri a migliorare la performance del team; sono motivati dal senso di appartenenza e sono entusiasti di contribuire per una causa più grande;
     \item[freeloaders]: non contribuiscono al risultato di gruppo ma vi restano comunque all'interno, spesso a scapito della performance del gruppo stesso. Questi giocatori spesso perdono l'interesse velocemente, non chiedono di uscire o di essere rimpiazzati ma vi restano all'interno per vedere quale beneficio personale possono ottenere. 
@@ -165,9 +168,9 @@ Zichermann descrive le principali game mechanics e descrive alcune delle più im
     \end{itemize} 
     \item[livelli]: fungono da marcatori per i giocatori per conoscere la loro posizione nell'esperienza e nel percorso di gioco. La loro difficoltà non è solitamente lineare: si tende ad iniziare con livelli più semplici e progressivamente si va verso quelli più complessi. Solitamente un gioco viene strutturato così che il passaggio di livello avvenga dopo aver accumulato un determinato quantitativo di punti e che dia accesso a nuovi contenuti.
     \item[badge]: i badge marcano il completamento di obiettivi e il progresso nel gioco. In alcuni giochi possono anche rimpiazzare i livelli come marker del progresso. A livello di dinamiche, oltre che per mostrare uno status, le persone li desiderano per poterli collezionare, per ragioni estetiche o anche provare la piacevole e improvvisa sorpresa di averne guadagnato uno nuovo.
-    \item[classifiche]: le classifiche permettono di ordinare le performance degli utenti e di fare paragoni. Ne esistono di due tipi: le "infinite leader boards", che comprendono tutti gli utenti del gioco, e le "no discentive leader boards", dove il giocatore viene posto al centro, senza badare alla sua posizione nel ranking, così che possa vedere solamente il giocatore prima e dopo di lui. La competizione risulta correlata all'aspirazione di diventare il migliore all'interno del proprio gruppo di amici.
+    \item[classifiche]: le classifiche permettono di ordinare le performance degli utenti e di fare paragoni. Ne esistono di due tipi: le ``infinite leader boards'', che comprendono tutti gli utenti del gioco, e le ``no discentive leader boards'', dove il giocatore viene posto al centro, senza badare alla sua posizione nel ranking, così che possa vedere solamente il giocatore prima e dopo di lui. La competizione risulta correlata all'aspirazione di diventare il migliore all'interno del proprio gruppo di amici.
     \item[economia di gioco]: l'adozione di determinati tipi di punti permette la costruzione di vere e proprie economie all'interno del gioco, dove l'utente non può vincere a lungo senza comprare, guadagnare e consumare determinati beni virtuali.
-    \item[sfide]: le sfide corrispondono alle "missioni" che gli utenti devono compiere all'interno del gioco; danno un motivo al giocatore per continuare a partecipare al gioco, motivandoli a raggiungere risultati attraverso ricompense come trofei, badge da sbloccare. Inoltre, gli obiettivi generano confronto e competizione quando mostrati agli altri giocatori. È importante ricordare che a un giocatore novizio o ai primi livelli non vanno date sfide da livello master: è meglio dare sfide diverse per livelli diversi. Un particolare tipo di sfide sono quelle collaborative. Possono essere inserite nel gioco per creare esperienze di gruppo, dove i giocatori agiscono da soli ma i risultati vengono sommati insieme.
+    \item[sfide]: le sfide corrispondono alle ``missioni'' che gli utenti devono compiere all'interno del gioco; danno un motivo al giocatore per continuare a partecipare al gioco, motivandoli a raggiungere risultati attraverso ricompense come trofei, badge da sbloccare. Inoltre, gli obiettivi generano confronto e competizione quando mostrati agli altri giocatori. È importante ricordare che a un giocatore novizio o ai primi livelli non vanno date sfide da livello master: è meglio dare sfide diverse per livelli diversi. Un particolare tipo di sfide sono quelle collaborative. Possono essere inserite nel gioco per creare esperienze di gruppo, dove i giocatori agiscono da soli ma i risultati vengono sommati insieme.
     \item[onboarding]: con onborading si intende l'atto di introdurre un nuovo utente nel gioco. I primi minuti in cui un utente s'impegna in un gioco sono i più importanti, perché è in questo breve lasso di tempo che prende le sue decisioni. In questi piccoli istanti non bisogna dare spiegazioni o far leggere lunghi testi con regole o istruzioni, ma bisogna fargli provare l'applicazione. Inoltre in questa fase non bisogna chiedere all'utente di registrarsi: non c'è nulla allo stato attuale che lo obblighi a fornire dati personali ad un servizio che ancora non conosce. Il processo di onborading rivela la complessità del gioco lentamente e non può fallire. Nel livello 0 (il tutorial) non ci devono essere scelte. Al giocatore vanno offerte azioni senza rischi, che non possono portare al fallimento, poi va ricompensato per aver completato l'azione con successo.
 \end{description}
 
@@ -184,12 +187,12 @@ Il progression loop considera cosa accade all'utente durante l'utilizzo del sist
 
 Le game mechanics sono quindi essenziali per innescare questi loop. Ci sono meccaniche di gioco che funzionano bene per una determinata tipologia di giocatori e meno bene per altre. Per questo motivo è importante considerare anche le dinamiche di gioco che sono l'evoluzione temporale e i pattern sia del gioco che dei giocatori che rendono il gioco più divertente. Buone dinamiche portano il giocatore nelle fasi successive al momento giusto, così che il giocatore si senta abile ed esperto. Se non ben progettate, portano a perdere giocatori nel tempo o per noia o per il dover affrontare sfide troppo complesse, che rendono il gioco meno divertente.
 
-\section{Meccaniche di gioco nella nostra app\label{sec:meccaniche-app}}
-Per quanto riguarda la nostra app, abbiamo deciso di applicare le seguenti meccaniche di gioco:
+\section{Meccaniche di gioco in Trains\label{sec:meccaniche-app}}
+Per quanto riguarda Trains, abbiamo deciso di applicare le seguenti meccaniche di gioco:
 \begin{itemize}
     \item punti esperienza e punti abilità, che permettono al giocatore di salire di livello, in modo più facile all'inizio e più difficile man mano che il gioco prosegue, ma cercando di non fornire obiettivi impossibili;
-    \item badge guadagnati in base a un numero di azioni specifiche svolte;
-    \item classifiche per esperienza e abilità diverse;
+    %\item badge guadagnati in base a un numero di azioni specifiche svolte;
+    \item classifica globale per livello raggiunto (in futuro si potrebbero implementare più classifiche in base ai livelli e ai punti esperienza guadagnati dagli utenti);
     \item on-boarding con tutorial: l'utente viene introdotto al gioco senza troppe spiegazioni, e in modo che riceva immediatamente una gratificazione dopo aver votato un treno. Le istruzioni vengono visualizzate per i primi tre accessi, dopodiché scompaiono e diventano raggiungibili dal menù laterale.
 \end{itemize}
 
@@ -236,5 +239,5 @@ La MPI comprende 6 componenti:
 Inoltre, l'esperienza persuasiva guadagna credibilità dall'essere all'interno delle mura protettive del social network.
 •Rapid Cycle: l'esperienza persuasiva può essere distribuita velocemente da una persona all'altra.
 •Huge Social Graph: l'esperienza persuasiva può potenzialmente raggiungere milioni di persone connesse attraverso legami e/o interazioni sociali;
-•Measured Impact: l'effetto dell'esperienza persuasiva è osservabile dagli utenti e dai creatori; ad esempio facebook platforms mette a disposizione sia dei creatori che a coloro che usano l'app di vedere le statistiche base sulla distribuzione ed uso dell'applicazione.
+•Measured Impact: l'effetto dell'esperienza persuasiva è osservabile dagli utenti e dai creatori; ad esempio Facebook platforms mette a disposizione sia dei creatori che a coloro che usano l'app di vedere le statistiche base sulla distribuzione ed uso dell'applicazione.
 \end{comment}
