--- a/relazione/template.tex
+++ b/relazione/template.tex
@@ -1,23 +1,25 @@
 % Template per relazioni
 
-\documentclass[10pt,                   
+\documentclass[10pt,
                a4paper,
-               twoside,
-               italian,
-               english]{scrbook}
+               oneside,
+               openright,
+               titlepage,
+               headinclude,
+               footinclude,
+               numbers=noenddot,
+               cleardoublepage=empty]{scrbook}
 \usepackage{type1ec}
 \usepackage[T1]{fontenc}
 \usepackage{lmodern}
 \usepackage{textcomp}
-\usepackage{lettrine}
-\usepackage{calligra}
 \usepackage[utf8]{inputenc}
 \usepackage[english, italian]{babel}
 \usepackage[autostyle,italian=guillemets]{csquotes}
 \usepackage[backref,hyperref,square,style=philosophy-modern,autolang=hyphen,backend=biber]{biblatex}
+\usepackage{subfig}
 \usepackage[eulerchapternumbers,beramono,pdfspacing]{classicthesis}
 \usepackage{arsclassica}
-\usepackage[top=60pt,bottom=75pt]{geometry}
 \usepackage[noadvisor]{frontespizio}
 \usepackage{float}
 \usepackage{tabularx}
@@ -30,23 +32,12 @@
 \usepackage{afterpage}
 \quotingsetup{font=small}
 \usepackage{wrapfig}
-\usepackage{subfig}
 \usepackage{colortbl}
 \newcommand{\mail}[1]{\href{mailto:#1}{\texttt{#1}}}
 \newcommand{\omissis}{[\textellipsis\unkern]}
 \newcommand{\inglese}[1]{\foreignlanguage{english}{\em #1}}
 \newcolumntype{Y}{>{\centering\arraybackslash}X}
-\renewcommand{\LettrineFontHook}{\fontfamily{calligra}}
-\renewcommand{\LettrineTextFont}{\itshape}
 \onehalfspacing
 \addbibresource{bibliografia.bib}
 \renewcommand{\tablename}{}
-\usepackage[hyphenbreaks]{breakurl}
 \usepackage{verbatim}
-%\renewcommand{\thefootnote}{\fnsymbol{footnote}}
-%
-%\raggedbottom
-\usepackage{enumitem}
-
-\usepackage[parfill]{parskip}
-\setlength{\parskip}{1ex}
