--- a/relazione/sezioni/introduzione.tex
+++ b/relazione/sezioni/introduzione.tex
@@ -9,11 +9,11 @@ Gli obiettivi del progetto sono:
 \end{itemize}
 
 \section{Descrizione generale\label{sec:descrizione}}
-IsTrainFree è un'applicazione mobile cross-platform utile agli utenti che usano i treni regionali per viaggiare da un posto all'altro. Dopo aver scelto il treno che vuole prendere, l'utente diventa un giudice e dà un voto alla carrozza del treno in cui si trova. Ogni utente può vedere la media dei voti dati al treno fino a quel momento, in modo da capire se conviene prendere quel treno o un altro, oppure cambiare mezzo di trasporto.
+Trains è un'applicazione mobile cross-platform utile agli utenti che usano i treni regionali per viaggiare da un posto all'altro. Dopo aver scelto il treno che vuole prendere, l'utente diventa un giudice e dà un voto alla carrozza del treno in cui si trova. Ogni utente può vedere la media dei voti dati al treno fino a quel momento, in modo da capire se conviene prendere quel treno, un altro, oppure cambiare mezzo di trasporto.
 
 Gli elementi di gamification introdotti servono per coinvolgere l'utente e renderlo abituato all'uso dell'applicazione, di modo da farlo sentire soddisfatto e in modo da far crescere il numero di utenti che usano l'applicazione soprattutto in fase iniziale.
-Un altro obiettivo importante è quello di aiutare l'utente a capire se ci sono treni utili in fasce orarie inaspettate, in modo da ottimizzare eventuali viaggi e da far usare di più i treni in alternativa a mezzi di trasporto più inquinanti.
+Un altro obiettivo importante è quello di aiutare l'utente a capire se ci sono treni utili in fasce orarie inaspettate, per ottimizzare eventuali viaggi e da far usare di più i treni in alternativa a mezzi di trasporto più inquinanti.
 
 \section{Utenti target}
 Il pubblico di utenti che abbiamo considerato è generico e vario, perché chiunque può prendere un treno.
-L'applicazione vuole fornire un servizio ai viaggiatori che abitualmente prendono già il treno e coinvolgere e invogliare gli utenti meno abituali ad usare un mezzo più eco-sostenibile rispetto ad altri.
+L'applicazione vuole fornire un servizio ai viaggiatori che abitualmente prendono già il treno e coinvolgere e invogliare gli utenti meno abituali a usare un mezzo più eco-sostenibile rispetto ad altri.
